@@ -1,6 +1,7 @@
 AUX app.ini 1553 BLAKE2B a4e9d0aecb76d6e0150f74f98454a28923f7b2cac5a6e5a8ffb0411bbfcaab883c77f83e115946d328104023706c33a4d9c673a4752d0a007a57be5e64c81e07 SHA512 52cc76b5af4cfe7cf0167b40560e026d5611aace93b8fdb69bf5bcb33536dbc4fe544d7dea51604ec85473b04f1d0252f7fff62f9d6e186927dc4dec1a1d4e17
-AUX drone.service 666 BLAKE2B d637ef679f8797fc00f61293ba8d571d10a2b33c0dd7a0e5ccc5ea406eefec775cb929fab65ca843d0a1e6f0f153c17e6166d5c9f357a43e04b225c3d88bb6c6 SHA512 a899bc79ddb7fc49a80985a9e8c9da163b5ca01b6e8731f90aed97150f859dec2247e9f859402aada3af361c16181dba0bdcad113ebbb18b0dd278b90c90bdea
+AUX drone.service 711 BLAKE2B 7ddc0c7ef8b26ae2cffd62e211fa2ef5861ccd1e728f25cbbf0b1599430344bc6d0c0173c1a14eb4585dde76199df20214c8d09e97466b603b10b9c9042ebd62 SHA512 5535aab31147a114434944b7ce11ba5eadcb8356cc8db0d406dd2093976b06e604757aaba866ae921b4b705ed3c0939d1436272c4e4f07467881e7d1ef8c3b7a
 AUX drone.sh 591 BLAKE2B 81b437ab72793c3cbc82d4a49300eee45d8faffb6ad06ad3bfb194e07c7cc466875a7dcd08138e7ec9073a53885a3c3d94c862bcfac6d2e82639ca9d657581d0 SHA512 0772bbc0f92301d808e19d2a19f2169cb34ce30fb5253fb40db6d2b69a3ac8a050a3366280fb66ea520afbd16a2882949ebeec53662ee323f2f1058a1339ffc1
 EBUILD drone-1.9.1-r1.ebuild 928 BLAKE2B 4f3e750dfd90c7ddbdb3b95170e17ba93b9944e264066b9bf5714a13494ee9e2707de04c1adf5568adc44f52e9c2435cc7587908274f2ab2a96a2cd280d019ac SHA512 fd4eeed82bb2414eedcec9607faa5f566278922161cb751c15a7b13a270cb3d872386b7978e95de962939a3e9a21ba091616d94782c6de4e58ec60c9bb872ad9
-MISC ChangeLog 1612 BLAKE2B 34a3ca27a4949e14ed452847c71b02b1e7e8949130227bddabd9e7eb72911ecf153ac53f3636f0c70ddea4735994b9a8b2bf1f7200539e562ba8cd3d4e7e7c46 SHA512 5c671aa73e81b24d3782b6f1ce3fb70cccc27c7973655d76419a043bb9f5d75dc666668b28f0493e5bb4abc8129c48f6cd9c336ba249e318f543e2ebbbced2f1
+EBUILD drone-1.9.2.ebuild 928 BLAKE2B 4f3e750dfd90c7ddbdb3b95170e17ba93b9944e264066b9bf5714a13494ee9e2707de04c1adf5568adc44f52e9c2435cc7587908274f2ab2a96a2cd280d019ac SHA512 fd4eeed82bb2414eedcec9607faa5f566278922161cb751c15a7b13a270cb3d872386b7978e95de962939a3e9a21ba091616d94782c6de4e58ec60c9bb872ad9
+MISC ChangeLog 1763 BLAKE2B 6d03650e9aaa5b8ef0a520cc67c824d4a750fb6d181f9c95db1832a56d5d0cb00c2dc47a0110d1d0716b9df761fe051c95f32a23c7339329faa6e9636114a00c SHA512 fa763de984842709ee2d6d05bcdac94135b7cb4189b1b4273468b2df982bdfdb8c3b1de5b0b021d4045a70599a33915aab8135987903258740d05e01ec858c45
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
